# trackflow

./: .env.example  .gitignore  AGENTS.md  DEV.md  Dockerfile  README.md  SYSTEM.md  fly.toml  notes.MD  pyproject.toml
.github/: main.yml
.github/workflows/: main.yml
ai-rules/: backend-architecture.mdc  frontend-react-patterns.mdc  react-query-and-client.mdc  rule-loading.md
app/: .env.example  auth.py  database.py  depedencies.py  dependencies.py  main.py  models.py  schemas.py  settings.py
app/models/: models.py
app/routers/: submissions.py  tracks.py  users.py  workspaces.py
app/schemas/: schemas.py
app/services/: auth.py  memberships.py  submissions.py  tracks.py  users.py  workspaces.py
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: AdminRouteGuard.tsx  router.tsx
frontend/src/client/: index.ts  sdk.gen.ts  setupClientAuth.ts  types.gen.ts
frontend/src/hooks/: useAddTrack.ts  useCreateProducerSubmission.ts  useCreateWorkspace.ts  useCurrentUser.ts  useDeleteTrack.ts  useDeleteWorkspace.ts  useEditTrack.ts  useLabelSubmissionEvents.ts  useLabelSubmissionTransitions.ts  useLabelSubmissions.ts  useLabelstaffProfile.ts  useLogin.ts  useLogout.ts  useProducerProfile.ts  useProducerSubmissionEvents.ts  useProducerSubmissions.ts  useRegister.ts  useTracks.ts  useUpdateLabelstaffProfile.ts  useUpdateProducerProfile.ts  useUpdateUser.ts  useUpdateWorkspace.ts  useWithdrawProducerSubmissions.ts  (+3 more)
tests/: conftest.py  test_user_flow.py
(+25 files in other folders)
